# chemfiles

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Contributing.md  Doxyfile  Doxyfile.in  LICENSE  NEWS.md  README.md  Todo.md  VERSION  appveyor.yml  codecov.yml  index.html
bindings/: CMakeLists.txt  Readme.md
bindings/c/: capi.cpp  cerrors.hpp  chemharp.h  harp.capi.cpp
bindings/c/tests/: chrp_atom.c  chrp_cell.c  chrp_errors.c  chrp_frame.c  chrp_topology.c  chrp_trajectory_read.c  chrp_trajectory_write.c  compile.c  read.c  write.c
bindings/fortran/: CMakeLists.txt  cdef.f90  chemharp.f90  ftypes.f90  interface.f90  strings.f90
bindings/fortran/tests/: chrp_atom.f90  chrp_cell.f90  chrp_errors.f90  chrp_frame.f90  chrp_topology.f90  chrp_trajectory_read.f90  chrp_trajectory_write.f90  compile.f90  read.f90  write.f90
bindings/python/: Atom.cpp  CMakeLists.txt  Errors.cpp  Frame.cpp  Topology.cpp  Trajectory.cpp  UnitCell.cpp  chemharp-python.hpp  chemharp.cpp  convertors.hpp
bindings/python/tests/: add_chemharp_to_path.py  basic.py  read.py  write.py
doc/: CMakeLists.txt  Doxyfile.in  README.md  c-api.rst  conf.cmake.py  conf.in.py  conf.py  conf.py.in  example.rst  extract-formats-doc.cpp  formats.rst  index.rst  installation.rst  others.rst  overview.rst  requirements.txt  selections.rst
doc/bindings/: c-api.rst  cpp-api.rst  fortran-api.rst  julia-api.rst  python-api.rst  rust-api.rst
doc/capi/: chfl_atom.rst  chfl_cell.rst  chfl_frame.rst  chfl_residue.rst  chfl_selection.rst  chfl_topology.rst  chfl_trajectory.rst  errors.rst  index.rst
doc/classes/: atom.rst  errors.rst  frame.rst  index.rst  logger.rst  residue.rst  selection.rst  topology.rst  trajectory.rst  unitcell.rst
doc/devdoc/: contributing.rst  file.rst  format.rst  internals.rst
doc/ext/: chfl_example.py  chfl_selection.py  fortran_domain.py  htmlhidden.py
doc/src/: configuration.rst  formats.rst  index.rst  installation.rst  overview.rst  properties.rst  selections.rst
doc/src/capi/: chfl_atom.rst  chfl_cell.rst  chfl_frame.rst  chfl_property.rst  chfl_residue.rst  chfl_selection.rst  chfl_topology.rst  chfl_trajectory.rst  errors.rst  index.rst  misc.rst
doc/src/classes/: atom.rst  errors.rst  frame.rst  index.rst  misc.rst  residue.rst  selection.rst  topology.rst
doc/src/devdoc/: file.rst  format.rst  internals.rst
doc/src/properties/: atom.toml  frame.toml  residue.toml
doc/src/templates/: page.html
doc/static/css/: chemfiles.css
doc/static/img/: chemharp.graphml  classes.graphml
doc/templates/: page.html
examples/: CMakeLists.txt  README.md
examples/c/: convert.c  generate.c  indexes.c  rmsd.c  select.c
examples/cpp/: convert.cpp  generate.cpp  indexes.cpp  rmsd.cpp  select.cpp
examples/fortran/: convert.f90  indexes.f90  rmsd.f90
examples/julia/: convert.jl  indexes.jl  rmsd.jl
examples/python/: convert.py  indexes.py  rmsd.py
tests/: CMakeLists.txt  CTestCustom.cmake.in  CTestCustom.in.cmake  README.md  atoms.cpp  capi.c  cell.cpp  configuration.cpp  dynlib.cpp  factory.cpp  files.cpp  format_factory.cpp  frame.cpp  helium.xyz  logging.cpp  parse.cpp  parser.cpp  property.cpp  residue.cpp  selection.cpp  selections.cpp  shared_allocator.cpp  test.c  topology.cpp  trajectory.cpp  types.cpp  unit-cell.cpp  utils.cpp  valgrind.supp  vector.cpp
tests/c/: atom.c  cell.c  chfl_atom.c  chfl_cell.c  chfl_errors.c  chfl_frame.c  chfl_logging.c  chfl_selections.c  chfl_topology.c  chfl_trajectory_read.c  chfl_trajectory_write.c  chrp_frame.c  chrp_trajectory_read.c  frame.c  logging.c  residue.c  selections.c  topology.c  trajectory.c
tests/capi/: atom.c  atom.cpp  cell.c  cell.cpp  errors.cpp  frame.cpp  logging.c  logging.cpp  misc.cpp  property.cpp  residue.cpp  selections.c  selections.cpp  shared_allocator.cpp  topology.c  topology.cpp  trajectory.cpp  utils.cpp
tests/capi/doc/: chfl_add_configuration.c  chfl_clear_errors.c  chfl_last_error.c  chfl_set_warning_callback.c  chfl_strerror.c  chfl_version.c
tests/catch/: catch.cpp  catch.hpp
tests/doc/: add_configuration.cpp  formats_list.cpp  guess_format.cpp  set_warning_callback.cpp
tests/doc/atom/: atom.cpp  atomic_number.cpp  charge.cpp  covalent_radius.cpp  full_name.cpp  mass.cpp  name.cpp  properties.cpp  property.cpp  type.cpp  vdw_radius.cpp
tests/doc/capi/: chfl_clear_errors.c  chfl_formats_list.c  chfl_guess_format.c  chfl_last_error.c  chfl_set_warning_callback.c  chfl_version.c
tests/doc/cell/: angles.cpp  cell-0.cpp  cell-1.cpp  cell-2.cpp  cell-6.cpp  cell-matrix.cpp  lengths.cpp  matrix.cpp  shape.cpp  volume.cpp  wrap.cpp
tests/doc/connectivity/: angle.cpp  bond.cpp  dihedral.cpp  improper.cpp
tests/doc/frame/: add_atom.cpp  add_bond.cpp  add_residue.cpp  add_velocities.cpp  angle.cpp  cell.cpp  clear_bonds.cpp  clone.cpp  dihedral.cpp  distance.cpp  frame-0.cpp  frame-2.cpp  frame.cpp  get.cpp  guess_bonds.cpp  guess_topology.cpp  index.cpp  indexing.cpp  iterate.cpp  out_of_plane.cpp  positions.cpp  properties.cpp  remove.cpp  remove_bond.cpp  reserve.cpp  resize.cpp  set.cpp  size.cpp  step.cpp  topology.cpp  (+1 more)
tests/files/: basic-file.cpp  binary-files.cpp  bz2-file.cpp  gz-file.cpp  memory-file.cpp  ncfile.cpp  netcdf-file.cpp  netcdf3-file.cpp  plain-file.cpp  tng-file.cpp  xdr-file.cpp  xz-file.cpp
tests/formats/: _con.cpp  amber-netcdf.cpp  amber-restart.cpp  bcif.cpp  cif.cpp  cml.cpp  compressed-xyz.cpp  cssr.cpp  dcd-molfile.cpp  dcd.cpp  gro-molfile.cpp  gro.cpp  inchi.cpp  lammps-atom.cpp  lammps-data.cpp  lammps-molfile.cpp  lammps-trajectory.cpp  mmcif.cpp  mmtf.cpp  mol2-molfile.cpp  mol2.cpp  molden-molfile.cpp  molfile.cpp  pdb-molfile.cpp  pdb.cpp  psf-molfile.cpp  sdf.cpp  smi.cpp  tinker.cpp  tng.cpp  tpr.cpp  trr-molfile.cpp  trr.cpp  xtc-molfile.cpp  xtc.cpp  xyz.cpp
tests/lints/: check-capi-docs.py  check-error-messages.py  check-external-size.py  check-public-headers.py  check-used-functions.py
tests/selections/: lexer.cpp  numeric-values.cpp  parser.cpp  selections-utils.cpp
(+1475 files in other folders)
