function(chrp_c_test _file_)
    get_filename_component(_name_ ${_file_} NAME_WE)
    set(_name_ "c-${_name_}")
    add_executable(${_name_} ${_file_})
    target_link_libraries(${_name_} chemharp)
    add_test(NAME ${_name_} COMMAND ${_name_} WORKING_DIRECTORY ${PROJECT_BINARY_DIR})
endfunction()

if(BUILD_TESTS)
    file(GLOB c_test_files ${CMAKE_CURRENT_SOURCE_DIR}/c/tests/*.c)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/c)
    add_definitions("-DDATADIR=\"${PROJECT_SOURCE_DIR}/tests/data/\"")
    foreach(test_file IN LISTS c_test_files)
        chrp_c_test(${test_file})
    endforeach(test_file)
endif()
