function(chrp_cpp_example _file_)
    get_filename_component(_name_ ${_file_} NAME_WE)
    add_executable(example-cpp-${_name_} ${_file_})
    target_link_libraries(example-cpp-${_name_} chemharp)
endfunction()

function(chrp_c_example _file_)
    get_filename_component(_name_ ${_file_} NAME_WE)
    add_executable(example-c-${_name_} ${_file_})
    target_link_libraries(example-c-${_name_} chemharp)
    if(NOT MSVC)
        target_link_libraries(example-c-${_name_} m)
    endif()
endfunction()

if(BUILD_TESTS)
    file(GLOB cpp_examples cpp/*.cpp)
    foreach(example IN LISTS cpp_examples)
        chrp_cpp_example(${example})
    endforeach()

    file(GLOB c_examples c/*.c)
    include_directories(${PROJECT_SOURCE_DIR}/bindings/c)
    foreach(example IN LISTS c_examples)
        chrp_c_example(${example})
    endforeach()
endif()
